gcc/testsuite/rust/rustc/ui/parser/new-unicode-escapes-1.rs
pub fn main() {
    let s = "\u{2603"; // { dg-error "" "" { target *-*-* } }
}

